Fix z-index navbar mobile

--- a/app/assets/stylesheets/components/_navbar-mobile.scss
+++ b/app/assets/stylesheets/components/_navbar-mobile.scss
@@ -5,7 +5,6 @@
   position: sticky;
   filter: drop-shadow(0px 1px 4px rgba(140, 48, 245, 0.15));
   bottom: 0;
-  z-index: 10;
   padding-left: 0.45 !important;
   padding-right: 0.45 !important;
   .picto {
